Current SWmonitor architecture

--- a/SWmonitor/footer.html
+++ b/SWmonitor/footer.html
@@ -1,8 +1,6 @@
-		</div>
-        <footer>
-        </footer>
-    </body>
-</html>
+
+<hr>
+<p>Created by Tadhg Garton, Philippe Grange, John Malone-Leigh, Sophie Murray and Peter Gallagher, DIAS 2019.</p>
 
 
 
