--- a/SWmonitor/html/geomagnetic/geo_header.html
+++ b/SWmonitor/html/geomagnetic/geo_header.html
@@ -1,31 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="description" contents="Local page for Irish Space Weather Monitoring">
-        <link rel="stylesheet" href="style.css" type="text/css">
-    </head>
-    <body class="geomagnetic">
-        <header>
-            <nav id="navigation">
-                <ul>
-                    <table width=220% height= 100pix>
-                      <tr>
 
-                        <td align="left">
-                          <li><a href="https://www.dias.ie/" target="_blank"> <img src="logos/dias.png" alt="DIAS logo" /></a></li>
-                        </td>
+<table width=100%>
+  <tr>
+    <td align="left" width=50%>
+      <a href="https://www.dias.ie/" target="_blank"> <img src="logos/dias.png" alt="DIAS logo" /></a>
+    </td>
 
-                        <td align="right">
-                    <li><a href="solarp.php" class="solar">Solar</a></li>
-                    <li><a href="helios.php" class="heliospheric">Heliospheric</a></li>
-                    <li><a href="atmosp.php" class="atmospheric">Atmospheric</a></li>
-                    <li><a href="geomag.php" class="geomagnetic">Geomagnetic</a></li>
-                    </td>
-                    </tr>
-                    </table>
-                </ul>
-            </nav>
-        </header>
-        <hr>
-        <div id="contents">
+    <td align="right" width=50%>
+      <a href="solarp.php" class="solar">Solar</a>
+      <a href="helios.php" class="heliospheric">Heliospheric</a>
+      <a href="atmosp.php" class="atmospheric">Atmospheric</a>
+      <a href="geomag.php" class="geomagnetic">Geomagnetic</a>
+    </td>
+  </tr>
+</table>
+
+<hr>
